--- a/static/css/style.css
+++ b/static/css/style.css
@@ -305,6 +305,7 @@ Message Box
   z-index: 1;
   top: 9px;
   right: 10px;
+  width: 280px;
   color: #fff;
   border: none;
   background: #248A52;
@@ -319,6 +320,24 @@ Message Box
 }
 .message-box .message-submit:hover {
   background: #1D7745;
+}
+#btn-mic.message-submit-on { 
+  position: absolute;
+  z-index: 1;
+  top: 9px;
+  right: 10px;
+  width: 280px;
+  color: #fff;
+  border: none;
+  background: #d84a38;
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 6px 10px;
+  border-radius: 10px;
+  outline: none !important;
+  -webkit-transition: background .2s ease;
+  transition: background .2s ease;
 }
 
 /*--------------------
